[project]
name = "oc-session-analyzer"
version = "1.0.1"
description = "Analyze and export OpenCode sessions containing specific patterns"
requires-python = ">=3.13"
authors = [
    {name = "OpenCode Session Analyzer"}
]
readme = "README.md"
keywords = ["opencode", "session", "analyzer", "export"]

[project.scripts]
oc-session-analyzer = "session_analyzer:main"
oc-session-export = "export_matching_sessions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
