[project]
name = "oc-session-analyzer"
version = "2.0.0"
description = "Analyze and export OpenCode sessions containing specific patterns"
requires-python = ">=3.13"
authors = [
    {name = "OpenCode Session Analyzer"}
]
readme = "README.md"
keywords = ["opencode", "session", "analyzer", "export"]

[project.scripts]
oc-session-analyzer = "oc_session_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
